<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/item_home" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/item_categories" />
    </group>

    <group android:id="@+id/group2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:visible="false"
            android:title="@string/item_account" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_heart"
            android:visible="false"
            android:title="@string/item_favorite" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_menu_order"
            android:visible="false"
            android:title="@string/item_order" />
        <item
            android:id="@+id/nav_shopping_cart"
            android:icon="@drawable/ic_shopping_cart_24"
            android:title="@string/item_shopping_cart" />
        <item
            android:id="@+id/nav_sign_in"
            android:icon="@drawable/ic_menu_sign_in"
            android:title="@string/item_sign_in" />
        <item
            android:id="@+id/nav_sign_off"
            android:icon="@drawable/ic_menu_sign_off"
            android:visible="false"
            android:title="@string/item_sign_off" />
    </group>
    <group android:id="@+id/group3" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_group"
            android:title="@string/item_about" />

    </group>

</menu>
